--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
   "devDependencies": {
     "gh-pages": "^6.2.0"
   },
-  "homepage": "https://github.io/kimericbyung/stackline-frontend"
+  "homepage": "https://kimericbyung.github.io/stackline-frontend"
 }
